src/content/docs/en/sdk/ios/v5/features/ad-revenue.mdx
---
title: Record ad revenue information
description:
   Record ad revenue information for supported network partners using the
   Adjust SDK.
slug: en/sdk/ios/features/ad-revenue
versions:
   - label: v5
     value: v5
     default: true
   - label: v4
     value: v4
redirects:
   v4: /en/sdk/ios/v4/features/ad-revenue
---

You can record ad revenue for [supported network partners](https://help.adjust.com/en/article/ad-revenue) using the Adjust SDK.

<Callout type="important">

You need to perform some extra setup steps in your Adjust dashboard to measure ad revenue. Contact your Technical Account Manager or support@adjust.com to get started.

</Callout>

## Instantiate an ADJAdRevenue object {#instantiate-an-adjadrevenue-object}

<CodeBlock title="Method signature">

```objc
- (nullable id)initWithSource:(nonnull NSString *)source;
```

</CodeBlock>

To send ad revenue information with the Adjust SDK, you need to instantiate an `ADJAdRevenue` object. This object contains variables that are sent to Adjust when ad revenue is recorded in your app.

To instantiate an ad revenue object, create a new `ADJAdRevenue` instance and pass the following argument:

-  `source` (`NSString`): The source of the ad revenue. See the table below for available sources.

| Argument                  | Ad revenue Source |
| ------------------------- | ----------------- |
| `"applovin_max_sdk"`      | AppLovin MAX      |
| `"admob_sdk"`             | AdMob             |
| `"ironsource_sdk"`        | ironSource        |
| `"admost_sdk"`            | AdMost            |
| `"unity_sdk"`             | Unity             |
| `"helium_chartboost_sdk"` | Helium Chartboost |
| `"adx_sdk"`               | Ad(X)             |
| `"publisher_sdk"`         | Generic source    |
| `"tradplus_sdk"`          | TradPlus          |
| `"topon_sdk"`             | TopOn             |
| `"mopub"`                 | Mopub             |

<Tabs>
<Tab title="Swift" sync="swift">

```swift
guard let adRevenue = ADJAdRevenue(source: "applovin_max_sdk") else { return }
//...
Adjust.trackAdRevenue(adRevenue)
```

</Tab>
<Tab title="Objective-C" sync="objc">

```objc
ADJAdRevenue *adRevenue = [[ADJAdRevenue alloc]
                              initWithSource:@"applovin_max_sdk"];
//...
[Adjust trackAdRevenue:adRevenue];
```

</Tab>
</Tabs>

## Send ad revenue {#send-ad-revenue}

<CodeBlock title="Method signature">

```objc
+ (void)trackAdRevenue:(nonnull ADJAdRevenue *)adRevenue;
```

</CodeBlock>

To send ad revenue to Adjust, call the `trackAdRevenue` method with your ad revenue instance as an argument.

<Tabs>
<Tab title="Swift" sync="swift">

```swift
guard let adRevenue = ADJAdRevenue(source: "applovin_max_sdk") else { return }
Adjust.trackAdRevenue(adRevenue)
```

</Tab>
<Tab title="Objective-C" sync="objc">

```objc
ADJAdRevenue *adRevenue = [[ADJAdRevenue alloc]
                              initWithSource:@"applovin_max_sdk"];
///...
[Adjust trackAdRevenue:adRevenue];
```

</Tab>
</Tabs>

## Record ad revenue amount {#record-ad-revenue-amount}

<CodeBlock title="Method signature">

```objc
- (void)setRevenue:(double)amount currency:(nonnull NSString *)currency;
```

</CodeBlock>

To send the ad revenue amount, call the `setRevenue` method and pass the following arguments:

-  `revenue` (`double`): The amount of revenue
-  `currency` (`NSString`): The 3 character [ISO 4217 code](https://www.iban.com/currency-codes) of your reporting currency

<Callout type="seealso">

Check the [guide to recording purchases in different currencies](https://help.adjust.com/en/article/currency-conversion) for more information.

</Callout>

<Tabs>
<Tab title="Swift" sync="swift">

```swift
guard let adRevenue = ADJAdRevenue(source: "applovin_max_sdk") else { return }
adRevenue.setRevenue(1.6, currency: "USD")
Adjust.trackAdRevenue(adRevenue)
```

</Tab>
<Tab title="Objective-C" sync="objc">

```objc
ADJAdRevenue *adRevenue = [[ADJAdRevenue alloc]
                              initWithSource:@"applovin_max_sdk"];
[adRevenue setRevenue:1.6 currency:@"USD"];
[Adjust trackAdRevenue:adRevenue];
```

</Tab>
</Tabs>

## Record ad campaign details {#record-ad-campaign-details}

The `ADJAdRevenue` class contains properties you can use to report on your ad campaigns.

### Ad impressions {#ad-impressions}

<CodeBlock title="Method signature">

```objc
- (void)setAdImpressionsCount:(int)adImpressionsCount;
```

</CodeBlock>

To send the number of recorded ad impressions, call the `setAdImpressionsCount` method and pass the following argument:

-  `adImpressionsCount` (`int`): The number of ad impressions.

<Tabs>
<Tab title="Swift" sync="swift">

```swift
guard let adRevenue = ADJAdRevenue(source: "applovin_max_sdk") else { return }
adRevenue.setAdImpressionsCount(1)
Adjust.trackAdRevenue(adRevenue)
```

</Tab>
<Tab title="Objective-C" sync="objc">

```objc
ADJAdRevenue *adRevenue = [[ADJAdRevenue alloc]
                              initWithSource:@"applovin_max_sdk"];
[adRevenue setAdImpressionsCount:1];
[Adjust trackAdRevenue:adRevenue];
```

</Tab>
</Tabs>

### Ad revenue network {#ad-revenue-network}

<CodeBlock title="Method signature">

```objc
- (void)setAdRevenueNetwork:(nonnull NSString *)adRevenueNetwork;
```

</CodeBlock>

To send the ad revenue network, call the `setAdRevenueNetwork` method and pass the following argument:

-  `adRevenueNetwork` (`NSString`): The network name.

<Tabs>
<Tab title="Swift" sync="swift">

```swift
guard let adRevenue = ADJAdRevenue(source: "applovin_max_sdk") else { return }
adRevenue.setAdRevenueNetwork("network1")
Adjust.trackAdRevenue(adRevenue)
```

</Tab>
<Tab title="Objective-C" sync="objc">

```objc
ADJAdRevenue *adRevenue = [[ADJAdRevenue alloc]
                              initWithSource:@"applovin_max_sdk"];
[adRevenue setAdRevenueNetwork:@"network1"];
[Adjust trackAdRevenue:adRevenue];
```

</Tab>
</Tabs>

### Ad revenue unit {#ad-revenue-unit}

<CodeBlock title="Method signature">

```objc
- (void)setAdRevenueUnit:(nonnull NSString *)adRevenueUnit;
```

</CodeBlock>

To send the ad revenue unit, call the `setAdRevenueUnit` method and pass the following argument:

-  `adRevenueUnit` (`NSString`): The ad unit.

<Tabs>
<Tab title="Swift" sync="swift">

```swift
guard let adRevenue = ADJAdRevenue(source: "applovin_max_sdk") else { return }
adRevenue.setAdRevenueUnit("unit1")
Adjust.trackAdRevenue(adRevenue)
```

</Tab>
<Tab title="Objective-C" sync="objc">

```objc
ADJAdRevenue *adRevenue = [[ADJAdRevenue alloc]
                              initWithSource:@"applovin_max_sdk"];
[adRevenue setAdRevenueUnit:@"unit1"];
[Adjust trackAdRevenue:adRevenue];
```

</Tab>
</Tabs>

### Ad revenue placement {#ad-revenue-placement}

<CodeBlock title="Method signature">

```objc
- (void)setAdRevenuePlacement:(nonnull NSString *)adRevenuePlacement;
```

</CodeBlock>

To send the ad revenue placement, call the `setAdRevenuePlacement` method and pass the following argument:

-  `adRevenuePlacement` (`NSString`): The ad placement.

<Tabs>
<Tab title="Swift" sync="swift">

```swift
guard let adRevenue = ADJAdRevenue(source: "applovin_max_sdk") else { return }
adRevenue.setAdRevenuePlacement("banner")
Adjust.trackAdRevenue(adRevenue)
```

</Tab>
<Tab title="Objective-C" sync="objc">

```objc
ADJAdRevenue *adRevenue = [[ADJAdRevenue alloc]
                              initWithSource:@"applovin_max_sdk"];
[adRevenue setAdRevenuePlacement:@"banner"];
[Adjust trackAdRevenue:adRevenue];
```

</Tab>
</Tabs>

## Add callback parameters {#add-callback-parameters}

<CodeBlock title="Method signature">

```objc
- (void)addCallbackParameter:(nonnull NSString *)key value:(nonnull NSString *)value;
```

</CodeBlock>

If you [register a callback URL](https://help.adjust.com/en/article/recommended-placeholders-callbacks) in the Adjust dashboard, the SDK sends a GET request to your callback URL when it records an event.

You can configure callback parameters to your servers. Once you configure parameters on an event, the SDK appends them to your [callback URL](https://help.adjust.com/en/article/raw-data-exports). You can use this information to analyze your users' in-app behavior with your BI system.

Add callback parameters to your event by calling the `addCallbackParameter` method with `NSString` key-value arguments. You can add multiple parameters by calling this method multiple times.

The Adjust SDK measures the event and sends a request to your URL with the callback parameters. For example, if you register the URL `https://www.mydomain.com/callback`, your callback looks like this:

<CodeBlock highlight="key=value, foo=bar">

```http
https://www.mydomain.com/callback?key=value&foo=bar
```

</CodeBlock>

<Callout type="note">

Adjust doesn't store your custom callback parameters. Custom parameters are only appended to your callback URL.

</Callout>

If you are using CSV uploads, make sure to add the parameters to your CSV definition.

Adjust supports many placeholders which you can use to pass information from the SDK to your URL. For example, the `{idfa}` placeholder for iOS and the `{gps_adid}` placeholder for Android. The `{publisher_parameter}` placeholder presents all callback parameters in a single string.

<Callout type="seealso">

You can read more about using URL callbacks, including a full list of available values, in the [callbacks guide](https://help.adjust.com/en/article/callbacks).

</Callout>

<Tabs>
<Tab title="Swift" sync="swift">

```swift
guard let adRevenue = ADJAdRevenue(source: "applovin_max_sdk") else { return }
adRevenue.addCallbackParameter(key, value: value)
Adjust.trackAdRevenue(adRevenue)
```

</Tab>
<Tab title="Objective-C" sync="objc">

```objc
ADJAdRevenue *adRevenue = [[ADJAdRevenue alloc]
                              initWithSource:@"applovin_max_sdk"];
[adRevenue addCallbackParameter:key value:value];
[Adjust trackAdRevenue:adRevenue];
```

</Tab>
</Tabs>

## Add partner parameters {#add-partner-parameters}

<CodeBlock title="Method signature">

```objc
- (void)addPartnerParameter:(nonnull NSString *)key value:(nonnull NSString *)value;
```

</CodeBlock>

You can send extra information to your network partners by adding [partner parameters](https://help.adjust.com/en/article/data-sharing-ad-network#map-parameters).

Adjust sends partner parameters to [external partners](https://help.adjust.com/en/article/integrated-partners) you have set up. This information is useful for more granular analysis and retargeting purposes. Adjust's servers forward these parameters once you have set them up and enabled them for a partner.

Add partner parameters to your event by calling the `addPartnerParameter` method with `NSString` key-value arguments. You can add multiple parameters by calling this method multiple times.

<Tabs>
<Tab title="Swift" sync="swift">

```swift
guard let adRevenue = ADJAdRevenue(source: "applovin_max_sdk") else { return }
adRevenue.addPartnerParameter(key, value: value)
Adjust.trackAdRevenue(adRevenue)
```

</Tab>
<Tab title="Objective-C" sync="objc">

```objc
ADJAdRevenue *adRevenue = [[ADJAdRevenue alloc]
                              initWithSource:@"applovin_max_sdk"];
[adRevenue addPartnerParameter:key value:value];
[Adjust trackAdRevenue:adRevenue];
```

</Tab>
</Tabs>

## Example {#example}

This example shows how to set up and record an ad revenue object with the following properties:

-  AppLovin MAX as the revenue source
-  1 Euro as the revenue amount
-  10 ad impressions
-  _`"network1"`_ as the ad revenue network
-  _`"unit1"`_ as the ad revenue unit
-  _`"banner"`_ as the ad revenue placement
-  A callback parameter: `"key1" = "value1"`
-  A partner parameter: `"key2" = "value2"`

<Tabs>
<Tab title="Swift" sync="swift">

```swift
guard let adRevenue = ADJAdRevenue(source: "applovin_max_sdk") else { return }
adRevenue.setRevenue(1, currency: "EUR")
adRevenue.setAdImpressionsCount(10)
adRevenue.setAdRevenueNetwork("network1")
adRevenue.setAdRevenueUnit("unit1")
adRevenue.setAdRevenuePlacement("banner")
adRevenue.addCallbackParameter("key1", value: "value1")
adRevenue.addPartnerParameter("key2", value: "value2")
Adjust.trackAdRevenue(adRevenue)
```

</Tab>
<Tab title="Objective-C" sync="objc">

```objc
ADJAdRevenue *adRevenue = [[ADJAdRevenue alloc]
                              initWithSource:@"applovin_max_sdk"];
[adRevenue setRevenue:1 currency:@"EUR"];
[adRevenue setAdImpressionsCount:10];
[adRevenue setAdRevenueNetwork:@"network1"];
[adRevenue setAdRevenueUnit:@"unit1"];
[adRevenue setAdRevenuePlacement:@"banner"];
[adRevenue addCallbackParameter:@"key1" value:@"value1"];
[adRevenue addPartnerParameter:@"key2" value:@"value2"];
[Adjust trackAdRevenue:adRevenue];
```

</Tab>
</Tabs>
